--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
+  background-color: rgb(226, 233, 78);
+  color:rgb(255, 80, 141);
+  text-align: center;
+  font-size: 30px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, 'Ubuntu', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div.Counter, section.controls button {
+  font-size: 30px;
+  text-align: center;
+  padding: 5px 10px;
+  display: inline-block;
+  margin: 16px ;
+  cursor: pointer;
+  color:rgb(40, 20, 220);
+  border-radius: 30px;
+  border-width: 30px;
+}
+
+ p.count{
+  font-size: 50px;
+  font-weight: bold;
+ }
+ 
+
+
+
+
