--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+/* buttons */
 div.Counter, section.controls button {
   font-size: 30px;
   text-align: center;
